[project]
name = "workspace-storage"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "copilot-swe-agent[bot]", email = "198982749+Copilot@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
fabric = ["semantic-link>=0.11.0", "azure-identity>=1.23.0", "azure-core>=1.35.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
